remove deprecated keyCode and fix bugs

--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
         <div id="answer"></div>
       </div>
       <div id="calculator-pad">
-        <button data-key="27" class="backtrack">AC</button>
-        <button data-key="46" class="backtrack">DEL</button>
-        <button data-key="46" class="operator">%</button>
-        <button data-key="111" class="operator">÷</button>
-        <button data-key="103" class="operand">7</button>
-        <button data-key="104" class="operand">8</button>
-        <button data-key="105" class="operand">9</button>
-        <button data-key="106" class="operator">*</button>
-        <button data-key="100" class="operand">4</button>
-        <button data-key="101" class="operand">5</button>
-        <button data-key="102" class="operand">6</button>
-        <button data-key="109" class="operator">−</button>
-        <button data-key="97" class="operand">1</button>
-        <button data-key="98" class="operand">2</button>
-        <button data-key="99" class="operand">3</button>
-        <button data-key="107" class="operator">+</button>
-        <button data-key="96" class="operand">0</button>
-        <button data-key="110" class="operand">.</button>
-        <button data-key="54" class="operator">±</button>
-        <button data-key="13" class="operator">=</button>
+        <button data-key="Escape" class="backtrack">AC</button>
+        <button data-key="Delete" class="backtrack">DEL</button>
+        <button data-key="%" class="operator">%</button>
+        <button data-key="/" class="operator">÷</button>
+        <button data-key="7" class="operand">7</button>
+        <button data-key="8" class="operand">8</button>
+        <button data-key="9" class="operand">9</button>
+        <button data-key="*" class="operator">*</button>
+        <button data-key="4" class="operand">4</button>
+        <button data-key="5" class="operand">5</button>
+        <button data-key="6" class="operand">6</button>
+        <button data-key="-" class="operator">−</button>
+        <button data-key="1" class="operand">1</button>
+        <button data-key="2" class="operand">2</button>
+        <button data-key="3" class="operand">3</button>
+        <button data-key="+" class="operator">+</button>
+        <button data-key="0" class="operand">0</button>
+        <button data-key="." class="operand">.</button>
+        <button data-key="^" class="operator">±</button>
+        <button data-key="Enter" class="operator">=</button>
       </div>
     </div>
   </div>
