update readme, change multiplication symbol, increase margin for footer

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button data-key="7" class="operand">7</button>
         <button data-key="8" class="operand">8</button>
         <button data-key="9" class="operand">9</button>
-        <button data-key="*" class="operator">*</button>
+        <button data-key="x" class="operator">x</button>
         <button data-key="4" class="operand">4</button>
         <button data-key="5" class="operand">5</button>
         <button data-key="6" class="operand">6</button>
